# roadLaneSegmentation

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
.additional/: github_commit_prefix.py
checkpoints/: README.md
configs/: config_sample.yml  train.yaml
docs/: color_mapping.md  ideas.md  links.md
lane_detection_hackathon/: apolloscape.py  baseparser.py  callbacks.py  datasets.py  evaluation.py  example.py  grid_generator.py  inference.py  masks.py  metrics.py  patch_extractor.py  transforms.py
lane_detection_hackathon/utils/: fs.py  image.py  load.py  misc.py  project.py  torch_transform.py  types.py
notebooks/: 01_inference.ipynb  02_evaluation.ipynb  03_data_analysis.ipynb  04_video_processing.ipynb  example.ipynb
notebooks/debugging/: 01_dataset.ipynb  02_albumentations.ipynb  03_image_tiling_test.ipynb  04_image_overlay_test.ipynb
road_lane_segmentation/: __init__.py  callbacks.py  datasets.py  masks.py
road_lane_segmentation/utils/: hash.py
scripts/: config_sample.py  parser.py  splitter.py  start_jupyterlabe.sh  train.py
